force-app/main/default/objects/Product2/fields/Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>