force-app/main/default/objects/Product2/fields/Search_Layout_Product_test__c.field-meta.xml
<CustomField>
    <fullName>Search_Layout_Product_test__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Search Layout Product test</label>
    <length>12</length>
    <type>Text</type>
</CustomField>