force-app/main/default/objects/Product2/fields/Test_Conflict_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Test_Conflict_Resolution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Conflict Resolution</label>
    <length>14</length>
    <type>Text</type>
</CustomField>