force-app/main/default/objects/Product2/recordTypes/Product_RT.recordType-meta.xml
<RecordType>
    <fullName>Product_RT</fullName>
    <active>true</active>
    <label>Product RT</label>
</RecordType>